<resources>
    <string name="app_name">PersonasMaterial</string>
    <string name="action_settings">Settings</string>
    <string name="cedula">Cédula</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="titulo_registro">REGISTRO</string>
    <string name="guardar">GUARDAR</string>
    <string name="borrar">BORRAR</string>
    <string name="mensaje_error_cedula">Digite la cédula</string>
    <string name="mensaje_error_nombre">Digite el nombre</string>
    <string name="mensaje_error_apellido">Digite el apellido</string>
    <string name="mensaje_exitoso_guardar">Persona Guardada Exitosamente!!</string>

</resources>
